syntax = "proto3";

package moment_proto;
option go_package = "./;moment_proto";

message PingRequest {}
message PingResponse {
    string ping = 1;
}

service PingService {
    rpc Ping (PingRequest) returns (PingResponse);
}

// -----------------------------------------------------------------------

message FlangeData {
    enum Type {
        welded = 0;
        flat = 1;
        free = 2;
    }

    Type type = 1;
    string standartId = 2;
    string markId = 3;
    int32 dy = 4;
    double py = 5;
    int32 corrosion = 6;
}

message BoltData {
    string markId = 1;
}

message GasketData {
    string typeId = 1;
    string envId = 2;
    double thickness = 3;
    double d_out = 4;
    double d_in = 5;
}

message FlangeRequest {
    enum Flanges {
        isolated = 0;
        nonIsolated = 1;
        manually = 2;
    }

    enum Type {
        bolt = 0;
        pin = 1;
    }

    enum Condition {
        uncontrollable = 0;
        controllable = 1;
        controllablePin = 2;
    }

    enum Calcutation {
        basis = 0;
        strength = 1;
    }

    double pressure = 1;//P
    int32 axialForce = 2;//F
    int32 bendingMoment = 3;//M
    double temp = 4;//T
    bool isWork = 5;//work
    Flanges flanges = 6;//ParTem
    bool isSameFlange = 7;//Odin
    bool isEmbedded = 8;//ZakDet
    Type type = 9;//Tip
    Condition condition = 10;//UsZat
    Calcutation calculation = 11;//Moment

    repeated FlangeData flangesData = 12;
    BoltData bolts = 13;
    GasketData gasket = 14;
}

message FlangeResult {
    double dOut = 1;
	double d = 2;
	double dk = 3;
	double dnk = 4;
	double ds = 5;
	double h = 6;
	double hk = 7;
	double s0 = 8;
	double s1 = 9;
	double l = 10;
	double d6 = 11;
	double c = 12;
	double tf = 13;
	double tk = 14;
	double alphaK = 15;
	double epsilonKAt20 = 16;
	double epsilonK = 17;
	double sigmaKAt20 = 18;
	double sigmaK = 19;
	double alphaF = 20;
	double epsilonAt20 = 21;
	double epsilon = 22;
	double sigmaAt20 = 23;
	double sigma = 24;
	double sigmaM = 25;
	double sigmaMAt20 = 26;
	double sigmaR = 27;
	double sigmaRAt20 = 28;
	string material = 29;
}

message BoltResult {
    int32 diameter = 1;
	double area = 2;
    int32 count = 3;
    double lenght = 4;
    double temp = 5;
    double alpha = 6;
	double epsilonAt20 = 7;
	double epsilon = 8;
	double sigmaAt20 = 9;
	double sigma = 10;
}

message GasketResult {
    string typeId = 1;
    string envId = 2;
    double thickness = 3;
    double d_out = 4;
    double width = 5;
    double m = 6;
    double pres = 7;
    double compression = 8;
    double epsilon = 9;
    double permissiblePres = 10;
}

message CalculatedFlange {
    double b0 = 1;
    double Dsp = 2;
    double Po = 3;
    double Rp = 4;
    double A = 5;
    double Qd = 6;
    double Qfm = 7;
    double Qt = 8;
    double Pb = 9;
    double alpha = 10;
    double alphaM = 11;
    double Pb1 = 12;
    double Pb2 = 13;
    double Pbr = 14;

    double sigmaB1 = 15;
    double sigmaB2 = 16;
    double dSigmaM = 17;
    double dSigmaR = 18;
    double q = 19;
    double qP = 20;
    double Mkp = 21;
    double Mkp1 = 22;
    double Mrek = 23;
    double Qrek = 24;
    double Mmax = 25;
    double Qmax = 26;
}

message FlangeResponse {
    bool isSameFlange = 1;
    repeated FlangeResult flanges = 2;
    BoltResult bolt = 3;
    GasketResult gasket = 4;
    CalculatedFlange calc = 5;
}

service FlangeService {
    rpc CalculateFlange (FlangeRequest) returns (FlangeResponse);
}